# app/Models/Product.php
@@ -2,7 +2,6 @@
 
 namespace App\Models;
 
-use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
@@ -43,12 +42,22 @@ class Product extends Model
      * Campos de ordenación disponibles.
      */
     const sorts = [
-
         'name' => 'desc',
         'id' => 'desc',
     ];
+
+    const getfields = [
+        'name',
+        'description',
+        'photo',
+        'stock',
+        'price',
+        'status',
+        'category_id',
+        'server_id',
+    ];
     public function category()
     {
-        return $this->belongsTo(Category::class,'category_id');
+        return $this->belongsTo(Category::class, 'category_id');
     }
 }
